--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>Harpreet Singh</h1>
+            <h1>Harpreet Singh A Beautifully Paired Font Site</h1>
         </header>
         <nav>
             <ul>
