--- a/two.html
+++ b/two.html
@@ -18,7 +18,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>Harpreet Singh</h1>
+            <h1>Harpreet Singh A Beautifully Paired Font Site</h1>
         </header>
         <nav>
             <ul>
